# gto-solver-origin

./: .env.example  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.frontend  docker-compose.yml  pyproject.toml
api/: beta.py  input_validator.py  launch_checklist.md  legal.py  main.py  monitoring.py  owasp_checklist.md  rate_limit.py  requirements.txt  security.py  solver_cache.py  stripe_webhook.py  supabase_auth.py  test_api.py
benches/: cfr_bench.rs  dcfr_bench.rs
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
nginx/: nginx.conf
python/: kuhn_cfr.py  leduc_dcfr.py  test_kuhn_cfr.py
src/: action_abstraction.rs  card_abstraction.rs  cfr.rs  cfr_plus.rs  dcfr.rs  dcfr_parallel.rs  hand_evaluator.rs  lib.rs  main.rs
src/leduc/: card.rs  game.rs  infoset.rs  mod.rs
src/nlhe/: state.rs
tests/: locustfile.py
